objects/vlocity_cmt__MediaContentTitle__c.object
<CustomObject>
    <description>This record stores the details of the Event / Show telecasted in Linear TV/Radio channels. This will also be referenced while creating Scheduled program records for Channel Master setup.</description>
    <fields>
        <fullName>vlocity_cmt__AvailableLanguages__c</fullName>
        <description>Captures the language of the Media Content.</description>
        <label>Available Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Captures the Description for the Media Content title.</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Genre__c</fullName>
        <description>Captures the genre of the Media Content.</description>
        <label>Genre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Soap Opera</fullName>
                </value>
                <value>
                    <fullName>Sitcom</fullName>
                </value>
                <value>
                    <fullName>Movie</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Sci-Fi</fullName>
                </value>
                <value>
                    <fullName>Thriller</fullName>
                </value>
                <value>
                    <fullName>Documentary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfEpisodes__c</fullName>
        <description>Captures the number of separate episodes in which a serialised story, radio, or television program is delivered.</description>
        <label>Number of Episodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Content Title</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Content Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>